--- a/config/fetch_price_config.json
+++ b/config/fetch_price_config.json
@@ -107,6 +107,14 @@
             "quoteAsset": "SOL",
             "amount": "10000",
             "pairKeys": "879F697iuDJGMevRkRcnW21fcXiAeLJK1ffsw2ATebce"
+        },
+        {
+            "connector": "raydiumv5",
+            "symbol": "SOL/USDC",
+            "baseAsset": "SOL",
+            "quoteAsset": "USDC",
+            "amount": "20",
+            "pairKeys": "2QdhepnKRTLjjSqPL1PtKNwqrUkoLee5Gqs8bvZhRdMv"
         }
     ]
 }
