--- a/config/fetch_price_config.json
+++ b/config/fetch_price_config.json
@@ -77,44 +77,20 @@
             "amount": "2000"
         },
         {
-            "connector": "raydiumv4",
-            "symbol": "RACA/BUSD",
-            "baseAsset": "RAY",
-            "quoteAsset": "USDT",
-            "amount": "200",
-            "pairKeys": "DVa7Qmb5ct9RCpaU7UTpSaf3GVMYz17vNVU67XpdCRut"
-        },
-        {
-            "connector": "raydiumv4",
-            "symbol": "BOME/SOL",
-            "baseAsset": "BOME",
-            "quoteAsset": "SOL",
-            "amount": "10000",
-            "pairKeys": "DSUvc5qf5LJHHV5e2tD184ixotSnCnwj7i4jJa4Xsrmt"
-        },
-        {
-            "connector": "raydiumv4",
-            "symbol": "WIF/SOL",
-            "baseAsset": "WIF",
-            "quoteAsset": "SOL",
-            "amount": "100",
-            "pairKeys": "EP2ib6dYdEeqD8MfE2ezHCxX3kP3K2eLKkirfPm5eyMx"
-        },
-        {
-            "connector": "raydiumv4",
-            "symbol": "MEW/SOL",
-            "baseAsset": "MEW",
-            "quoteAsset": "SOL",
-            "amount": "10000",
-            "pairKeys": "879F697iuDJGMevRkRcnW21fcXiAeLJK1ffsw2ATebce"
-        },
-        {
-            "connector": "raydiumv5",
+            "connector": "raydiumCLMM",
             "symbol": "SOL/USDC",
             "baseAsset": "SOL",
             "quoteAsset": "USDC",
-            "amount": "20",
+            "amount": "1",
             "pairKeys": "2QdhepnKRTLjjSqPL1PtKNwqrUkoLee5Gqs8bvZhRdMv"
+        },
+        {
+            "connector": "raydiumV4",
+            "symbol": "SOL/USDC",
+            "baseAsset": "SOL",
+            "quoteAsset": "USDC",
+            "amount": "1",
+            "pairKeys": "58oQChx4yWmvKdwLLZzBi4ChoCc2fqCUWBkwMihLYQo2"
         }
     ]
 }
