--- a/package.json
+++ b/package.json
@@ -6,8 +6,14 @@
     "@triton-one/yellowstone-grpc": "^0.3.0",
     "@types/node-cron": "^3.0.11",
     "axios": "^1.6.7",
+    "bip39": "^3.1.0",
+    "body-parser": "^1.20.2",
     "bs58": "^5.0.0",
+    "cors": "^2.8.5",
     "decimal.js": "^10.4.3",
+    "ed25519-hd-key": "^1.3.0",
+    "express": "^4.19.2",
+    "multer": "^1.4.5-lts.1",
     "node-cron": "^3.0.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.3.3",
